# speakernotes-whisper

./: README.md  main.py  pyproject.toml
speakernotes_whisper/: app.py  claude_client.py  pptx_writer.py  transcribe.py
tests/: test_claude_client.py  test_pptx_writer.py  test_transcribe.py
